[tool.poetry]
name = "llm-agent-api"
version = "0.1.0"
description = "Test Task for JetBrains internship."
authors = ["Anastasija Rakic"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
google-generativeai = "^0.8.3"
langchain-google-genai = "^2.0.3"
langchain-community = "^0.3.4"
langgraph = "^0.2.41"
tavily-python = "^0.5.0"
langgraph-checkpoint-sqlite = "^2.0.1"
langchain-google-vertexai = "^2.0.6"
huggingface-hub = "^0.26.2"
jinja2 = "^3.1.4"
autopep8 = "^2.3.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
pylint = "^3.3.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
